# meichu2024-imxrt

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  justfile  wrapper.h
.cargo/: config.toml
hack/: nxp.bdat  nxp.pdat
nuttxspace/nuttx/: .config  Make.defs
src/: backend.rs  fs.rs  gt911.rs  main.rs  protocal.rs  slint_support.rs  sys.rs  time.rs  ui.rs
ui/: main.slint
