[package]
name = "nxp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nxp"
test = false
bench = false


[dependencies]


[dependencies.slint]
version = "1.8.0"
default-features = false
features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"]

[dependencies.anyhow]
version = "1.0.89"
default-features = false


[build-dependencies]
bindgen = "0.70.1"
slint-build = "1.8.0"


[build-dependencies.imxrt-rt]
version = "0.1.4"
features = ["device"]
